@@ -1,12 +1,12 @@
 DIST scm5e3.zip 901866 RMD160 91f97bf4efd6bf734fe3e789762a90f20ad7b9b2 SHA1 3d7a0160357840c6a96ef9ded6fb31d92507561d SHA256 65fe69d6f3ccc2adeb4f73fed4a73c700789a2e8b7c7937f5bb9b4f851e3db7d
-EBUILD scm-5.5.3.ebuild 1307 RMD160 9a7da370c0d8707a0e3f30cc705e711e0559d77a SHA1 700105984cd245ec012bfa2bd5cb20e26ea5b769 SHA256 d471c9166041f7435e938af8cf9071c61a6db4dd49bbccead9401557b62e023a
-MD5 bcfbf2b1cae9a7e8149f7e9ba5a723a5 scm-5.5.3.ebuild 1307
-RMD160 9a7da370c0d8707a0e3f30cc705e711e0559d77a scm-5.5.3.ebuild 1307
-SHA256 d471c9166041f7435e938af8cf9071c61a6db4dd49bbccead9401557b62e023a scm-5.5.3.ebuild 1307
-MISC ChangeLog 330 RMD160 3cc9baaa62a2291d420f6647ffff983b2302b78f SHA1 8f12f7af7ac844ce13d139149c390430dfd5edf6 SHA256 1d36b4a014dc3c8334432e6036d68149c17d70b4c81367b11db031009f3cd1b5
-MD5 363cee4b25369fd7f2f3d41731aab9a2 ChangeLog 330
-RMD160 3cc9baaa62a2291d420f6647ffff983b2302b78f ChangeLog 330
-SHA256 1d36b4a014dc3c8334432e6036d68149c17d70b4c81367b11db031009f3cd1b5 ChangeLog 330
+EBUILD scm-5.5.3.ebuild 1287 RMD160 44fc8bfa6a63bd660ae13fcd98fb04f057481134 SHA1 e0ddc5013d26bf63817dbd2a8b2796af8eecf14e SHA256 a6994e80d7ea83883ab1d36ac97b1b369734eb49c378254a3df86c8f942ce2aa
+MD5 6dfa7e24b394437f169b3da23173e576 scm-5.5.3.ebuild 1287
+RMD160 44fc8bfa6a63bd660ae13fcd98fb04f057481134 scm-5.5.3.ebuild 1287
+SHA256 a6994e80d7ea83883ab1d36ac97b1b369734eb49c378254a3df86c8f942ce2aa scm-5.5.3.ebuild 1287
+MISC ChangeLog 426 RMD160 29bf07864b4efc4d43933bc9b90ede7c18473d0c SHA1 d3112dfd313adbf52185027ba099ac394570a696 SHA256 9dbd14799fdeb62e48dd5c96573506749c8e51a9ffc381e8633b956d1620761c
+MD5 04435e7e3b9ae7bf9d06b2f9a5910acb ChangeLog 426
+RMD160 29bf07864b4efc4d43933bc9b90ede7c18473d0c ChangeLog 426
+SHA256 9dbd14799fdeb62e48dd5c96573506749c8e51a9ffc381e8633b956d1620761c ChangeLog 426
 MISC metadata.xml 434 RMD160 951fec63f3325b7f92693c88948382715576d8c9 SHA1 cf322011d73ec3e648fe45f7bf357c39eaa29d52 SHA256 b810a305f07a75ef4299bde4aa2bd136e98bcad906b4000d46235a127dbf7844
 MD5 542fee3e9b107c86b6ff309d6362f466 metadata.xml 434
 RMD160 951fec63f3325b7f92693c88948382715576d8c9 metadata.xml 434
