@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-scheme/scm/scm-5.5.3.ebuild,v 1.2 2007/02/02 20:05:16 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-scheme/scm/scm-5.5.3.ebuild,v 1.3 2007/05/28 11:46:22 hkbst Exp $
 
 inherit versionator eutils
 
@@ -23,7 +23,7 @@ IUSE=""
 #unzip for unpacking
 RDEPEND=""
 DEPEND="app-arch/unzip
-	>=dev-scheme/slib-3.1.4-r2"
+		>=dev-scheme/slib-3.1.4-r2"
 
 src_compile() {
 	einfo "Making scmlit"
@@ -45,5 +45,5 @@ src_install() {
 
 pkg_postinst() {
 	einfo "Regenerating catalog..."
-	${ROOT}/usr/bin/scm -e"(require ('new-catalog))"
+	scm -e "(require 'new-catalog)"
 }
