@@ -1,6 +1,9 @@
 # ChangeLog for dev-scheme/scm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-scheme/scm/ChangeLog,v 1.1 2007/01/24 18:34:29 hkbst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-scheme/scm/ChangeLog,v 1.2 2007/05/28 11:46:22 hkbst Exp $
+
+  28 May 2007; Marijn Schouten <hkBst@gentoo.org> scm-5.5.3.ebuild:
+  fix new-catalog creation
 
 *scm-5.5.3 (24 Jan 2007)
 
